# book-library

./: CLAUDE.md  README.md  SPEC.md  library.db  main.py  pyproject.toml  test.sh
app/: auth.py  auth_routes.py  database.py  db_models.py  exceptions.py  main.py  models.py  routes.py  store.py
app/auth/: router.py  schemas.py  service.py
app/books/: crud.py  router.py  schemas.py
app/core/: db_models.py  logging.py
